# Kirstens-clone

./: .cproject  .gitignore  .project  README.md  build  viewer
LICENSES/: openal-linden.txt
indra/: CMakeLists.txt
indra/cmake/: 00-Common.cmake  CMakeLists.txt  PLEXUS.cmake
indra/newview/: CMakeLists.txt  llappviewer.cpp  llstartup.cpp  llviewermenu.cpp
indra/newview/skins/default/xui/en/: menu_login.xml  menu_viewer.xml
indra/plexus/: CMakeLists.txt  plexusinit.cpp  plexusinit.h
